# braniii.github.io

./: .gitignore  LICENSE  Makefile  README.md  astro.config.mjs  compile.py  index.html  package-lock.json  package.json  pyproject.toml  serve.py  style.scss  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: pages.yml  stats.yml
_astro/: index.Bf3ROMfz.css  index.ByUXkdeQ.css  index.CSw3KEPW.css  index.CW7pedU7.css  index.DKZBDqlB.css  index.nVbYju-7.css
data/: index.json
docs/: index.html
docs/static/: index.css
scripts/: fetch_stats.py
src/: index.html  index.tailwind.css
src/components/: Footer.astro  Header.astro  StatGroup.astro
src/data/: index.json  stats.json
src/layouts/: Layout.astro
src/pages/: index.astro
src/static/: blissful.asc
src/styles/: global.css
static/: index.css  script.js  style.css
styles/: index.tailwind.css  package.json  tailwind.config.js
templates/: footer.html  header.html  index.html  layout.html
