[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["braniii"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
Flask = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
