[project]
name = "site"
version = "0.1.0"
description = ""
authors = [{ name = "braniii" }]
requires-python = "~=3.10"
license = "Apache-2.0"
dependencies = [
    "Jinja2>=2.11.2,<3",
    "Flask>=1.1.2,<2",
    "MarkupSafe==2.0.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
